# stack_data

./: .gitignore  .travis.yml  MANIFEST.in  README.md  example.py  make_release.sh  pyproject.toml  setup.cfg  setup.py  stack_data.py  test.py  tox.ini
.github/workflows/: pytest.yml
stack_data/: __init__.py  core.py  formatting.py  serializing.py  stack_data.py  test_utils.py  utils.py
tests/: __init__.py  test_core.py  test_formatter.py  test_serializer.py  test_utils.py  utils.py
tests/golden_files/: blank_invisible_no_linenos.txt  blank_single.txt  blank_visible.txt  blank_visible_no_linenos.txt  blank_visible_with_linenos_no_current_line_indicator.txt  block_left_new.txt  block_left_old.txt  block_right_new.txt  block_right_old.txt  cython_example.txt  f_string_3.8.txt  f_string_new.txt  f_string_old.txt  format_frame.txt  format_stack.txt  linenos_no_current_line_indicator.txt  plain.txt  print_stack.txt  pygmented.txt  pygmented_error.txt  serialize.json  single_option_linenos_no_current_line_indicator.txt  variables.txt
tests/samples/: cython_example.pyx  example.py  formatter_example.py  not_code.txt  pieces.py  pygments_example.py  to_exec.py
